--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -93,6 +93,8 @@
     <string name="to">ל-</string>
     <string name="ok">אישור</string>
     <string name="date_older">לא ניתן שתאריך הסיום יהיה מוקדם מתאריך ההתחלה</string>
+    <string name="validation_error">שגיאת אימות</string>
+    <string name="validation_successfully">האימות הצליח</string>
 
     <string-array name="camera_type">
         <item>MG-983G</item>
