-Add parsing email -Bug fixed

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -96,10 +96,12 @@
     <string name="validation_error">שגיאת אימות</string>
     <string name="validation_successfully">האימות הצליח</string>
 
-    <string-array name="camera_type">
-        <item>MG-983G</item>
-        <item>MG-984G</item>
-        <item>BG-668</item>
+    <string-array name="camera_model">
+        <item>MG-983G-30M</item>
+        <item>MG-984G-36M</item>
+        <item>MG-984G-30M</item>
+        <item>MG-983G-36M</item>
+        <item>BG–668</item>
         <item>ATC</item>
         <item>HIKVISION</item>
     </string-array>
