-Scan just emails that did not scanned -Bugs fixed

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -101,6 +101,7 @@
     <string name="do_you_realy_want_delete_selected_alarm">אם אתה בטוח שאתה מעוניין למחוק התראות נבחרות?</string>
     <string name="no_selected_alarms">אין התראות שנבחרו</string>
     <string name="selected_alarms">התראות נבחרו</string>
+    <string name="reset">איפוס</string>
 
     <string-array name="camera_model">
         <item>MG-983G-30M</item>
