--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -102,6 +102,29 @@
     <string name="no_selected_alarms">אין התראות שנבחרו</string>
     <string name="selected_alarms">התראות נבחרו</string>
     <string name="reset">איפוס</string>
+    <string name="get_snapshot">Get snapshot</string>
+    <string name="delete_all_images">Delete all images</string>
+    <string name="get_battery_status">Get battery status</string>
+    <string name="get_parameters">Get parameters</string>
+    <string name="arm_camera">Arm camera</string>
+    <string name="disarm_camera">Disarm camera</string>
+    <string name="set_email_recipient">Set email recipients</string>
+    <string name="set_mms_recipients">Set mms recipients</string>
+    <string name="missing_phone_number">חסר מספר טלפון</string>
+    <string name="emails_title">הוסף אימיילים</string>
+    <string name="send_command">שלח פקודה</string>
+    <string name="email1">אימייל 1</string>
+    <string name="email2">אימייל 2</string>
+    <string name="email3">אימייל 3</string>
+    <string name="email4">אימייל 4</string>
+    <string name="phone_num_title">Add phone numbers</string>
+    <string name="phone_num_1">מספר טלפון 1</string>
+    <string name="phone_num_2">מספר טלפון 2</string>
+    <string name="phone_num_3">מספר טלפון 3</string>
+    <string name="phone_num_4">מספר טלפון 4</string>
+    <string name="you_need_at_least_one_email">צריך לפחות אימייל אחד</string>
+    <string name="you_need_at_least_one_phone_num">צריך לפחות מספר טלפון אחד</string>
+    <string name="invalid_email">אימייל שגוי</string>
 
     <string-array name="camera_model">
         <item>MG-983G-30M</item>
