-Add translation to commands

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -102,14 +102,14 @@
     <string name="no_selected_alarms">אין התראות שנבחרו</string>
     <string name="selected_alarms">התראות נבחרו</string>
     <string name="reset">איפוס</string>
-    <string name="get_snapshot">Get snapshot</string>
-    <string name="delete_all_images">Delete all images</string>
-    <string name="get_battery_status">Get battery status</string>
-    <string name="get_parameters">Get parameters</string>
-    <string name="arm_camera">Arm camera</string>
-    <string name="disarm_camera">Disarm camera</string>
-    <string name="set_email_recipient">Set email recipients</string>
-    <string name="set_mms_recipients">Set mms recipients</string>
+    <string name="get_snapshot">צילום תמונה יזומה באימייל</string>
+    <string name="delete_all_images">מחיקת כל התמונות בזיכרון</string>
+    <string name="get_battery_status">בדיקת מצב סוללה</string>
+    <string name="get_parameters">בירור פרמטרים</string>
+    <string name="arm_camera">דריכת מצלמה</string>
+    <string name="disarm_camera">ניטרול מצלמה</string>
+    <string name="set_email_recipient">הגדרת נמענים באימייל</string>
+    <string name="set_mms_recipients">הגדרת נמענים ל MMS</string>
     <string name="missing_phone_number">חסר מספר טלפון</string>
     <string name="emails_title">הוסף אימיילים</string>
     <string name="send_command">שלח פקודה</string>
