--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,7 +104,7 @@
     <string name="no_selected_alarms">No selected alarm</string>
     <string name="selected_alarms">selected alarm</string>
     <string name="reset">reset</string>
-    <string name="get_snapshot">Get snapshot</string>
+    <string name="get_snapshot_email">Get snapshot to email</string>
     <string name="delete_all_images">Delete all images</string>
     <string name="get_battery_status">Get battery status</string>
     <string name="get_parameters">Get parameters</string>
@@ -119,7 +119,7 @@
     <string name="email2">Email 2</string>
     <string name="email3">Email 3</string>
     <string name="email4">Email 4</string>
-    <string name="phone_num_title">Add phone numbers</string>
+    <string name="add_phone_num_title">Add phone numbers</string>
     <string name="phone_num_1">Phone number 1</string>
     <string name="phone_num_2">Phone number 2</string>
     <string name="phone_num_3">Phone number 3</string>
@@ -130,6 +130,14 @@
     <string name="set_admin_title">Set admin</string>
     <string name="incorrect_phone_number_or_password">Incorrect phone number or password</string>
     <string name="phone_num">Phone number:</string>
+    <string name="phone_num_title">Phone number</string>
+    <string name="settings">Settings</string>
+    <string name="commands">Commands</string>
+    <string name="delete">Delete</string>
+    <string name="back">Back</string>
+    <string name="commands_camera_title">Command screen</string>
+    <string name="get_snapshot_mms">Get snapshot to mms</string>
+    <string name="oredr_cannot_sent">Orders cannot be sent without a phone number</string>
 
     <string-array name="camera_model">
         <item>MG-983G-30M</item>
