--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -66,7 +66,7 @@
     <string name="activate">הפעל</string>
     <string name="error">שגיאה</string>
     <string name="general_desc">description</string>
-    <string name="email_subject">My Code for SG-Patrol App</string>
+    <string name="email_subject">My Code for SG-Trail Manager App</string>
     <string name="camera_system_title">מערכות ומצלמות</string>
     <string name="system_camera_configuration">הגדרות מערכת / מצלמה</string>
     <string name="system_camera_name">שם מערכת:</string>
